HEAD
    + Removed deprecated anste-manager and anste-job tools, use of a CI tool
      like Jenkins instead is recommended
    + Moved src/lib/ANSTE to src/ANSTE and data outside of src
    + Changing the cache type of the disk to one that gives faster results
    + Bridges are now named anstebr instead of virbr to avoid conflicts
    + Do not destroy scenario when a critical test fails using -wait-fail
    + files in images can be directories whose content is put in the image
      target directory
    + Fix install instructions using new repository
0.10
    + Added duration of each executed tests in JUnit report
    + Stop properly the execution or creation if an error is found in the
      custom pre/post installation scripts
    + Do not assign IP address to internal network bridges
    + Use VirtIO for network cards instead of e1000 in libvirt configuration
    + Use VirtIO instead of emulated IDE disks in libvirt configuration
    + Install packages always non-interactive and do not install recommends
    + Autoconnect with anste-connect if there is only one deployed host
    + Adding support to post tests scripts defined in the images
    + Added partial support for images definition in YAML
    + Unhardcode the nameserver used in the setup of the hosts
    + Passwordless and direct root login with anste-connect
    + Changing the kernel flavour from virtual to generic to allow
      nested virtualization
    + Change default images path to /var/tmp/anste-images
    + Fixed support for files in the scenarios defined in yaml
    + Changed the script that configured a host to be a dhcp-router
    + Allowing empty variables in the scenarios tests
    + Adding support to set the mirror from the image xml definition
    + Moving the mirror option to a new section
    + Deleted suppot for Xen and moved the mirror option to global section
    + Allow to specify architecture of base images
    + Added support for 64bit machines